--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2", features = ["sqlite", "chrono"] }
 diesel_migrations = "2"
 libsqlite3-sys = { version = "0.30", features = ["bundled"] }
+rand = "0.8"
