--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,4 +15,6 @@ chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "2", features = ["sqlite", "chrono"] }
 diesel_migrations = "2"
 libsqlite3-sys = { version = "0.30", features = ["bundled"] }
+portable-pty = "0.9"
+uuid = { version = "1", features = ["v4"] }
 rand = "0.8"
