Add Playwright testing infrastructure and UI overhaul plan
Phase 0 complete: Playwright test runner with Tauri API mock layer
that intercepts invoke() calls, enabling frontend tests without the
Rust backend. Includes 16 baseline smoke tests covering sidebar,
layout, and task detail views.

Also adds app icons, window size config, and mock data with settings
defaults for upcoming phases.

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,6 @@ dacm_events.log
 # Tauri generated schemas
 core/gen/
 
-# Dev mocks
-view/mocks/
+# Playwright artifacts
+.playwright-mcp/
+view/test-results/
