fix(core): plug memory leaks, add idle detection and perf overlay
Remove sessions from Rust SessionManager after PTY stream ends to free
handles. Clean up Tauri event listeners, terminal cache, and
activeSessions on session exit. Reduce xterm scrollback from 50K to 5K.

Add idle detection interval that marks running tasks as completed when
PTY output stops for 5s, and reverts to running when output resumes.

Remove auto-spawn side-effect from render() — tasks are now only created
by explicit user actions (New session button, Cmd+N, sidebar +).

Add Ctrl+Shift+P performance overlay showing CPU load, system memory
usage (color-coded), and per-child PTY process count and memory via
new get_system_stats Tauri command backed by sysinfo crate.

Split toolbar model selector into interface + model dropdowns.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -18,3 +18,4 @@ libsqlite3-sys = { version = "0.30", features = ["bundled"] }
 portable-pty = "0.9"
 uuid = { version = "1", features = ["v4"] }
 rand = "0.8"
+sysinfo = "0.33"
